--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "jquery": "^3.3.1",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
-    "vue2-selectize": "^1.1.7"
     "axios": "^0.18.0",
-    "vue": "^2.5.22"
+    "jquery": "^3.3.1",
+    "vue": "^2.5.22",
+    "vue2-selectize": "^1.1.7"
   },
   "devDependencies": {
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-plugin-eslint": "^3.3.0",
     "@vue/cli-service": "^3.3.0",
