--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "vue2-selectize": "^1.1.7"
   },
   "devDependencies": {
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-plugin-eslint": "^3.3.0",
     "@vue/cli-service": "^3.3.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "glob-all": "^3.1.0",
+    "node-sass": "^4.11.0",
+    "path": "^0.12.7",
+    "purgecss-webpack-plugin": "^1.4.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.22"
   },
   "eslintConfig": {
