--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "jquery": "^3.3.1",
     "vue": "^2.5.22",
-    "vue2-selectize": "^1.1.7"
+    "vue-select": "^2.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
