--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mapbox/sphericalmercator": "^1.1.0",
     "axios": "^0.18.0",
     "vue": "^2.5.22",
     "vue-select": "^2.5.1"
