--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mapbox/sphericalmercator": "^1.1.0",
     "axios": "^0.18.0",
+    "lodash": "^4.17.11",
     "vue": "^2.5.22",
     "vue-select": "^2.5.1"
   },
