--- a/package.json
+++ b/package.json
@@ -1,58 +1,33 @@
 {
   "name": "vue-esri-parks-finder",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
+    "core-js": "^2.6.5",
+    "register-service-worker": "^1.6.2",
+    "vue": "^2.6.10",
     "@mapbox/sphericalmercator": "^1.1.0",
     "axios": "^0.18.0",
-    "lodash": "^4.17.11",
-    "vue": "^2.5.22",
     "vue-select": "^2.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.13.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-plugin-pwa": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
+    "sass": "^1.18.0",
+    "sass-loader": "^7.1.0",
     "glob-all": "^3.1.0",
-    "node-sass": "^4.11.0",
     "path": "^0.12.7",
     "purgecss-webpack-plugin": "^1.4.0",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.22"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
+    "vue-template-compiler": "^2.5.21"
   },
   "postcss": {
     "plugins": {
       "autoprefixer": {}
     }
-  },
-  "resolutions": {
-    "terser": "3.14.1"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  }
 }
