--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@mapbox/sphericalmercator": "^1.1.0",
+    "@vue/cli": "^3.7.0",
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
-    "@mapbox/sphericalmercator": "^1.1.0",
-    "axios": "^0.18.0",
     "vue-select": "^2.5.1"
   },
   "devDependencies": {
