--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-pwa-tampa-parks",
-  "short_name": "vue-pwa-tampa-parks",
+  "name": "vue-esri-parks-finder",
+  "short_name": "vue-esri-parks-finder",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
@@ -15,6 +15,6 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#ffffff"
+  "background_color": "#000000",
+  "theme_color": "#4DBA87"
 }
